# crisis-summary

./: .pre-commit-config.yaml  README.md  pyproject.toml
crisis/: __init__.py  app.py  backend.py  feed.py  prompt.py  rss.py  rss_source.py  summarize.py  tweet.py
tests/: test_feed.py  test_prompt.py  test_summarize.py
