[tool.poetry]
name = "crisis"
version = "0.1.0"
description = "Summarization of the latest tweets for crisis managers using GPT-3."
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.6.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
