[tool.poetry]
name = "crisis"
version = "0.1.0"
description = "Summarization of the latest tweets for crisis managers using GPT-3."
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.6.3"
bs4 = "^0.0.1"
xmltodict = "^0.12.0"
streamlit = "^0.80.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"